fixes modal spacing and spinner errors

--- a/server/public/assets/styles/sass/main.scss
+++ b/server/public/assets/styles/sass/main.scss
@@ -464,9 +464,10 @@ table {
 }
 
 .modal {
-    width: 400px;
+    width: 480px;
     height: 200px;
     position: fixed;
+    border-radius: 0 4px 4px 4px;
     top: 50%;
     left: 50%;
     margin-top: -100px;
